Complete copy finished for Sprout page

--- a/work/sprout.html
+++ b/work/sprout.html
@@ -88,7 +88,7 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<h2>brief</h2>
-				<p>A month long project to design a website for a fictional company of our making, with an emphasis on responsive design. Our fictional company was Sprout Credit Union, which I created for a prior project where we needed to code out a <a href="http://www.sfu.ca/~tjwilkin/IAT%20339/P01/" target="_blank">styleguide</a> for said company. IAT 339. February 2018.</p>
+				<p>A month long project to design and develop a website for a fictional company of our making, with an emphasis on responsive design. Our fictional company was Sprout Credit Union, which I created for a prior project where we needed to code out a <a href="http://www.sfu.ca/~tjwilkin/IAT%20339/P01/" target="_blank">styleguide</a> for said company. IAT 339. February 2018.</p>
 			</div>
 			<div class="col-lg-6">
 				<figure>
@@ -102,7 +102,7 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<h2>coding</h2>
-				<p>Both team members contributed to writing equal portions of the website's code </p>
+				<p>For this project, we were required to code a fully functional responsive website using only HTML5 and CSS3, with no frameworks to assist. We were marked for our code readability and cleanliness of structure, in addition to code validity.</p>
 			</div>
 			<div class="col-lg-6">
 				<pre>
@@ -153,38 +153,21 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<h2>information architecture & copywriting</h2>
-				<p>For this project, we were required to include and organize specific content in the site. Namely:</p>
-				<ul>
-					<li>Company styleguide, including grid structure and colour swatches
-					<li>Content using real language (i.e. no Lorem Ipsum) appropriate for the company, it's voice, and the products it sells, including: company updates/events, about the company and multi-product/multi-service listings</li>
-					<li>Determine and build a sitemap to illustrate page hierarchy and the links between pages</li>
-					<li>Working with git, and proof of team members work on their individual branches</li>
-				</ul></p>
-				<p>... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... </p>
+				<p>For this project, we were required to write content using real language (i.e. no Lorem Ipsum). As such, I wrote the majority of the website's copy because I had experience working at a credit union. Aside from personal experience, I researched relevant products from local institutions and used that data to create a realistic-sounding organization while maintianing a unique voice that was representitive of the company's identity.</p>
+				<p>As we built out this content, we determined the website's hierarchy based on the logical userflow that one may undergo when using a financial institution's website. From a user-centric perspective, we decided how the various pages could link to one another to ease navigation and overall user experience.</p>
+				<button class="cta-button" onclick="location.href='http://www.sfu.ca/~tjwilkin/IAT%20339/P02/Final%20Week/'">SEE WEBSITE</button>
+				button class="cta-button" onclick="location.href='http://www.sfu.ca/~tjwilkin/IAT%20339/P02/Final%20Week/styleguide.html'">SEE STYLEGUIDE</button>
 			</div>
 			<div class="col-lg-6">
 				<figure>
 					<img src="../img/sproutSiteMap.png" alt="Diagram displaying Sprout Credit Union's proposed sitemap.">
 					<figcaption>
-						[Sprout Credit Union's proposed sitemap. March 2018.]
+						[Sprout Credit Union's sitemap. March 2018.]
 					</figcaption>
 				</figure>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-lg-6">
-				<h2>section</h2>
-				<p>... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... </p>
-			</div>
-			<div class="col-lg-6">
-				<figure>
-					<img src="../img/sproutProducts.png" class="img-fluid" alt="Screen capture of Sprout's finacial advising page.">
-					<figcaption>
-						Screen capture of Sprout's finacial advising page. March 2018.
-					</figcaption>
-				</figure>
-			</div>
-		</div>
+		<!--
 		<div class="row">
 			<div class="col-lg-6">
 				<h2>reflections</h2>
@@ -202,7 +185,9 @@
 				</figure>
 			</div>
 		</div>
-	</div> <!-- landing page content TBD -->
+	</div>
+-->
+	<!-- landing page content TBD -->
 
 	<button onclick="topFunction()" id="backToTopButton" title="Go to top">Back To Top</button> <!-- Button to scroll back to top because, that's too much work! -->
 
