Missed div tag, and missed bracket on button element

--- a/work/sprout.html
+++ b/work/sprout.html
@@ -85,6 +85,7 @@
 			</div>
 		<!-- close project summary -->
 		</div>
+
 		<div class="row">
 			<div class="col-lg-6">
 				<h2>brief</h2>
@@ -99,6 +100,7 @@
 				</figure>
 			</div>
 		</div>
+
 		<div class="row">
 			<div class="col-lg-6">
 				<h2>coding</h2>
@@ -150,13 +152,14 @@
 				<p class="snippet">Code snippet from the Personal Products page, showcasing the three offered products</p>
 			</div>
 		</div>
+
 		<div class="row">
 			<div class="col-lg-6">
 				<h2>information architecture & copywriting</h2>
 				<p>For this project, we were required to write content using real language (i.e. no Lorem Ipsum). As such, I wrote the majority of the website's copy because I had experience working at a credit union. Aside from personal experience, I researched relevant products from local institutions and used that data to create a realistic-sounding organization while maintianing a unique voice that was representitive of the company's identity.</p>
 				<p>As we built out this content, we determined the website's hierarchy based on the logical userflow that one may undergo when using a financial institution's website. From a user-centric perspective, we decided how the various pages could link to one another to ease navigation and overall user experience.</p>
 				<button class="cta-button" onclick="location.href='http://www.sfu.ca/~tjwilkin/IAT%20339/P02/Final%20Week/'">SEE WEBSITE</button>
-				button class="cta-button" onclick="location.href='http://www.sfu.ca/~tjwilkin/IAT%20339/P02/Final%20Week/styleguide.html'">SEE STYLEGUIDE</button>
+				<button class="cta-button" onclick="location.href='http://www.sfu.ca/~tjwilkin/IAT%20339/P02/Final%20Week/styleguide.html'">SEE STYLEGUIDE</button>
 			</div>
 			<div class="col-lg-6">
 				<figure>
@@ -167,26 +170,7 @@
 				</figure>
 			</div>
 		</div>
-		<!--
-		<div class="row">
-			<div class="col-lg-6">
-				<h2>reflections</h2>
-				<p>... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... </p>
-				<p>... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... ... </p>
-				<button class="cta-button" target="_blank" onclick="location.href='http://www.sfu.ca/~tjwilkin/IAT%20339/P02/Final%20Week/'">SEE WEBSITE</button>
-				<button class="cta-button" target="_blank" onclick="location.href='https://github.com/TaylorWilkinson/P02---IAT339'">SEE GIT REPO</button>
-			</div>
-			<div class="col-lg-6">
-				<figure>
-					<img src="../img/sproutNews.png" alt="Screen capture of the News page">
-					<figcaption>
-						Screen capture of the News page. March, 2018.
-					</figcaption>
-				</figure>
-			</div>
-		</div>
 	</div>
--->
 	<!-- landing page content TBD -->
 
 	<button onclick="topFunction()" id="backToTopButton" title="Go to top">Back To Top</button> <!-- Button to scroll back to top because, that's too much work! -->
