Copy edits made to Sprout and Times Past copy

--- a/work/sprout.html
+++ b/work/sprout.html
@@ -159,7 +159,7 @@
 				<p>For this project, we were required to write content using real language (i.e. no Lorem Ipsum). As such, I wrote the majority of the website's copy because I had experience working at a credit union. Aside from personal experience, I researched relevant products from local institutions and used that data to create a realistic-sounding organization while maintianing a unique voice that was representitive of the company's identity.</p>
 				<p>As we built out this content, we determined the website's hierarchy based on the logical userflow that one may undergo when using a financial institution's website. From a user-centric perspective, we decided how the various pages could link to one another to ease navigation and overall user experience.</p>
 				<button class="cta-button" onclick="location.href='http://www.sfu.ca/~tjwilkin/IAT%20339/P02/Final%20Week/'">SEE WEBSITE</button>
-				<button class="cta-button" onclick="location.href='http://www.sfu.ca/~tjwilkin/IAT%20339/P02/Final%20Week/styleguide.html'">SEE STYLEGUIDE</button>
+				<sfubutton class="cta-button" onclick="location.href='http://www.sfu.ca/~tjwilkin/IAT%20339/P02/Final%20Week/styleguide.html'">SEE STYLEGUIDE</button>
 			</div>
 			<div class="col-lg-6">
 				<figure>
