Correcting CSS hover for footer icons

--- a/work/retrofit-your-home.html
+++ b/work/retrofit-your-home.html
@@ -190,13 +190,13 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<a href="https://github.com/TaylorWilkinson/" target="_blank">
+					<a href="https://github.com/TaylorWilkinson/" target="_blank" id="footer-link">
 						<img class="icon" src="../img/github-logo.png" alt="GitHub logo">
 					</a>
-					<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
+					<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank" id="footer-link">
 						<img class="icon" src="../img/linkedin-logo.png" alt="LinkedIn logo">
 					</a>
-					<a href="mailto:tjwilkinsonn@gmail.com">
+					<a href="mailto:tjwilkinsonn@gmail.com" id="footer-link">
 						<img class="icon" src="../img/email-logo.png" alt="Email envelope icon">
 					</a>
 				</div>
