Removed Retrofit Your Home off portfolio

--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
 						<h3 id="proj-header-2">Sprout Credit Union</h3>
 					</a>
 				</div>
+				<!-- Adoption Awareness -->
+				<div id ="prj-container-6" class="project-preview col-sm-12 col-md-6 col-lg-4  filter graphics communications">
+					<a href="work/adoption-awareness.html">
+						<img src="img/iconAAM.png" alt="placeholder square" class="project-icon">
+						<h3 id="proj-header-6">Adoption Awareness Month</h3>
+					</a>
+				</div>
+				<!-- Studious Chef -->
+				<div id ="prj-container-7" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
+					<a href="work/studious-chef.html">
+						<img src="img/iconStudiousChef.png" alt="placeholder square" class="project-icon">
+						<h3 id="proj-header-7">The Studious Chef</h3>
+					</a>
+				</div>
 				<!-- IAT 339 Portfolio -->
 				<!-- <div id ="prj-container-4" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
 					<a href="work/first-portfolio.html">
@@ -127,20 +141,6 @@
 					</a>
 				</div>
 				-->
-				<!-- Adoption Awareness -->
-				<div id ="prj-container-6" class="project-preview col-sm-12 col-md-6 col-lg-4  filter graphics communications">
-					<a href="work/adoption-awareness.html">
-						<img src="img/iconAAM.png" alt="placeholder square" class="project-icon">
-						<h3 id="proj-header-6">Adoption Awareness Month</h3>
-					</a>
-				</div>
-				<!-- Studious Chef -->
-				<div id ="prj-container-7" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
-					<a href="work/studious-chef.html">
-						<img src="img/iconStudiousChef.png" alt="placeholder square" class="project-icon">
-						<h3 id="proj-header-7">The Studious Chef</h3>
-					</a>
-				</div>
 				<!-- Sunday Morning Simulator -->
 				<!--
 				<div id ="prj-container-8" class="project-preview col-sm-12 col-md-6 col-lg-4  filter java graphics">
@@ -151,12 +151,12 @@
 				</div>
 			-->
 				<!-- Retrofit Your Home -->
-				<div id ="prj-container-4" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
+				<!-- <div id ="prj-container-4" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
 					<a href="work/retrofit-your-home.html">
 						<img src="img/iconRetrofit.png" alt="placeholder square" class="project-icon">
 						<h3 id="proj-header-4">Retrofit Your Home</h3>
 					</a>
-				</div>
+				</div> -->
 			</div>
 		</div> <!-- end form column -->
 
