Removed unused AAM images and updated index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
 						<li><button class="filter-button" data-filter="all">all</button></li>
 						<li><button class="filter-button" data-filter="web">web development</button></li>
 						<li><button class="filter-button" data-filter="game">game development</button></li>
-						<!-- <li><button class="filter-button" data-filter="graphics">Graphic Design</button></li> -->
 						<li><button class="filter-button" data-filter="communications">communications</button></li>
 					</ul>
 					<!--
@@ -125,16 +124,10 @@
 						<h3 id="proj-header-7">The Studious Chef</h3>
 					</a>
 				</div>
-				<!-- IAT 339 Portfolio -->
-				<!-- <div id ="prj-container-4" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
-					<a href="work/first-portfolio.html">
-						<img src="img/iconPortfolio.png" alt="placeholder square" class="project-icon">
-						<h3 id="proj-header-4">First Coded Portfolio</h3>
-					</a>
-				</div> -->
+
 				<!-- Helping Hand -->
 				<!--
-				<div id ="prj-container-5" class="project-preview col-sm-12 col-md-6 col-lg-4  filter java">
+				<div id ="prj-container-5" class="project-preview col-sm-12 col-md-6 col-lg-4">
 					<a href="work/helping-hand.html">
 						<img src="img/iconHelpingHand.png" alt="placeholder square" class="project-icon">
 						<h3 id="proj-header-5">Helping Hand</h3>
