fixed footer color transition and edited image on About page

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 
 		<div class="row" id="full-width-content">
 			<div class="col-lg-3 offset-lg-1 col-md-4 col-sm-12">
-				<img src="img/selfie.png" alt="A photograph of Taylor in a stairwell" id="portrait">
+				<img src="img/selfie-circle.png" alt="A photograph of Taylor in a stairwell" id="portrait">
 			</div>
 			<div class="col-lg-6 col-md-8 col-sm-12">
 				<p>I'm a front-end web developer and designer living in Vancouver, B.C., and finishing her B.Sc. in Interactive Arts and Technology at SFU.</p>
