--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
-					<a href="index.html" id="navLink" class="nav-link">PROJECTS</a>
-					<a href="Resume_TaylorWilkinson.pdf" target="_blank" id="navLink" class="nav-link">RESUME</a>
-					<a href="about.html" id="navLink" class="nav-link">ABOUT</a>
+					<a href="index.html" id="navLink" class="nav-link">projects</a>
+					<a href="Resume_TaylorWilkinson.pdf" target="_blank" id="navLink" class="nav-link">resume</a>
+					<a href="about.html" id="navLink" class="nav-link">about</a>
 				</div>
 			</div><!-- Collapse -->
 		</div><!-- Container -->
@@ -60,7 +60,7 @@
 		<div class="col-sm-12 col-md-3" id="filter-list">
 			<div class="row">
 				<div id="hideOnSM">
-					<h3 class="filter-header">Project Filter</h3>
+					<h3 class="filter-header">project filter</h3>
 					<ul id="filter-ul">
 						<li><button class="filter-button" data-filter="all">all</button></li>
 						<li><button class="filter-button" data-filter="web">web development</button></li>
