Removed commented code (alt filter bar)

--- a/index.html
+++ b/index.html
@@ -67,22 +67,6 @@
 						<li><button class="filter-button" data-filter="game">game development</button></li>
 						<li><button class="filter-button" data-filter="communications">communications</button></li>
 					</ul>
-					<!--
-					<button id="filter-link" class="btn btn-primary" type="button" data-toggle="collapse" data-target="#filter-collapse" aria-expanded="false" aria-controls="filter-collapse">
-						FILTER
-					</button>
-					<div class="collapse" id="filter-collapse">
-						<div class="card card-body" id="filter-card">
-							<ul id="filter-ul">
-								<li><button class="filter-button" data-filter="all">All</button></li>
-								<li><button class="filter-button" data-filter="web">Web Development</button></li>
-								<li><button class="filter-button" data-filter="game">Game Development</button></li>
-								<li><button class="filter-button" data-filter="graphics">Graphic Design</button></li>
-								<li><button class="filter-button" data-filter="communications">Communications</button></li>
-							</ul>
-						</div>
-					</div>
-					-->
 				</div>
 			</div>
 		</div> <!-- end filter column -->
@@ -92,66 +76,50 @@
 				<!-- Form Validator -->
 				<div id ="prj-container-1" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
 					<a href="work/validator.html">
-						<img src="img/iconValidator.png" alt="placeholder square" class="project-icon">
+						<img src="img/iconValidator.png" alt="AEM Form Validator icon" class="project-icon">
+					</a>
+					<a href="work/validator.html">
 						<h3 id="proj-header-1">Form Validator</h3>
 					</a>
 				</div>
 				<!-- Time's Past -->
 				<div id ="prj-container-3" class="project-preview col-sm-12 col-md-6 col-lg-4  filter game">
 					<a href="work/times-past.html">
-						<img src="img/iconTimesPast.png" alt="placeholder square" class="project-icon">
+						<img src="img/iconTimesPast.png" alt="Time's Past icon" class="project-icon">
+					</a>
+					<a href="work/times-past.html">
 						<h3 id="proj-header-3">Time's Past</h3>
 					</a>
 				</div>
 				<!-- Sprout CU -->
 				<div id ="prj-container-2" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
 					<a href="work/sprout.html">
-						<img src="img/iconSprout.png" alt="placeholder square" class="project-icon">
+						<img src="img/iconSprout.png" alt="Sprout Credit Union icon" class="project-icon">
+					</a>
+					<a href="work/sprout.html">
 						<h3 id="proj-header-2">Sprout Credit Union</h3>
 					</a>
 				</div>
 				<!-- Adoption Awareness -->
 				<div id ="prj-container-6" class="project-preview col-sm-12 col-md-6 col-lg-4  filter graphics communications">
 					<a href="work/adoption-awareness.html">
-						<img src="img/iconAAM.png" alt="placeholder square" class="project-icon">
+						<img src="img/iconAAM.png" alt="Adoption Awareness Month project icon" class="project-icon">
+					</a>
+					<a>
 						<h3 id="proj-header-6">Adoption Awareness Month</h3>
 					</a>
 				</div>
 				<!-- Studious Chef -->
 				<div id ="prj-container-7" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
 					<a href="work/studious-chef.html">
-						<img src="img/iconStudiousChef.png" alt="placeholder square" class="project-icon">
+						<img src="img/iconStudiousChef.png" alt="The Studious Chef icon" class="project-icon">
+					</a>
+					<a href="work/studious-chef.html">
 						<h3 id="proj-header-7">The Studious Chef</h3>
 					</a>
 				</div>
-
-				<!-- Helping Hand -->
-				<!--
-				<div id ="prj-container-5" class="project-preview col-sm-12 col-md-6 col-lg-4">
-					<a href="work/helping-hand.html">
-						<img src="img/iconHelpingHand.png" alt="placeholder square" class="project-icon">
-						<h3 id="proj-header-5">Helping Hand</h3>
-					</a>
-				</div>
-				-->
-				<!-- Sunday Morning Simulator -->
-				<!--
-				<div id ="prj-container-8" class="project-preview col-sm-12 col-md-6 col-lg-4  filter java graphics">
-					<a href="work/sunday-morning.html">
-						<img src="img/iconSunday.png" alt="placeholder square" class="project-icon">
-						<h3 id="proj-header-8">Sunday Morning Simulator</h3>
-					</a>
-				</div>
-			-->
-				<!-- Retrofit Your Home -->
-				<!-- <div id ="prj-container-4" class="project-preview col-sm-12 col-md-6 col-lg-4  filter web">
-					<a href="work/retrofit-your-home.html">
-						<img src="img/iconRetrofit.png" alt="placeholder square" class="project-icon">
-						<h3 id="proj-header-4">Retrofit Your Home</h3>
-					</a>
-				</div> -->
 			</div>
-		</div> <!-- end form column -->
+		</div>
 
 		<footer class="footer" id="portfolio-footer">
 			<div class="container">
