nav bar links made lowercase

--- a/work/retrofit-your-home.html
+++ b/work/retrofit-your-home.html
@@ -48,9 +48,9 @@
 
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
-					<a href="../index.html" class="nav-item nav-link">PROJECTS</a>
-					<a href="../Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">RESUME</a>
-					<a href="../about.html" class="nav-item nav-link">ABOUT</a>
+					<a href="../index.html" class="nav-item nav-link">projects</a>
+					<a href="../Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">resume</a>
+					<a href="../about.html" class="nav-item nav-link">about</a>
 				</div>
 			</div> <!-- Collapse -->
 		</div>
