Correcting issues with containers

--- a/work/sprout.html
+++ b/work/sprout.html
@@ -19,7 +19,7 @@
 	<!-- normalize -->
 	<link rel="stylesheet" href="../css/normalize.min.css">
 	<!-- Bootstrap -->
-	<link rel="stylesheet" href="../css/bootstrap.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="../css/main.css">
 	<link rel="stylesheet" href="../css/flexbox.css">
@@ -176,7 +176,7 @@
 	<button onclick="topFunction()" id="backToTopButton" title="Go to top">Back To Top</button> <!-- Button to scroll back to top because, that's too much work! -->
 
 	<footer class="footer" id="portfolio-footer">
-		<div class="container">
+		<div class="container footer-container">
 			<div class="row">
 				<div class="col">
 					<a href="https://github.com/TaylorWilkinson/" target="_blank" id="footer-link">
@@ -191,16 +191,20 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
+		<div class="container footer-container">
 			<div class="row">
 				<p id="footer-copy">designed & hand coded with love and care</p>
 			</div>
 		</div>
 	</footer> <!-- footer -->
 
-  	<script src="../js/jquery.slim.min.js"></script>
+  	<!-- <script src="../js/jquery.slim.min.js"></script>
   	<script src="../js/popper.min.js"></script>
-  	<script src="../js/bootstrap.min.js"></script>
+  	<script src="../js/bootstrap.min.js"></script> -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
   	<script src="../js/scrollButton.js"></script>
 </body>
 </html>
