--- a/work/times-past.html
+++ b/work/times-past.html
@@ -18,8 +18,10 @@
 
 	<!-- normalize -->
 	<link rel="stylesheet" href="../css/normalize.min.css">
+
 	<!-- Bootstrap -->
-	<link rel="stylesheet" href="../css/bootstrap.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="../css/main.css">
 	<link rel="stylesheet" href="../css/flexbox.css">
@@ -57,18 +59,20 @@
 
 
 	<div class="container body-copy">
-		<div class="row full-row">
+
+		<div class="row">
 			<div class="col-xs-12 col-md-6 mx-auto no-side-padding">
 				<figure>
 					<img src="../img/timesPast_lvl1Gems.png" class=".img-fluid" alt="Screen capture of Time's Past gameplay showing the player collecting gems">
 				</figure>
 			</div>
 		</div>
-		<div class="row full-row">
-			<div class="col-lg-6 no-side-padding">
+
+		<div class="row">
+			<div class="col-12 no-side-padding">
 				<h1>Times Past</h1>
 			</div>
-		</div> <!-- title section -->
+		</div>  <!-- title section -->
 
 
 		<div class="row full-row">
@@ -175,7 +179,7 @@
 	<button onclick="topFunction()" id="backToTopButton" title="Go to top">back to top</button> <!-- Button to scroll back to top because, that's too much work! -->
 
 	<footer class="footer" id="portfolio-footer">
-		<div class="container">
+		<div class="container footer-container">
 			<div class="row">
 				<div class="col">
 					<a href="https://github.com/TaylorWilkinson/" target="_blank" id="footer-link">
@@ -190,16 +194,20 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
+		<div class="container footer-container">
 			<div class="row">
 				<p id="footer-copy">designed & hand coded with love and care</p>
 			</div>
 		</div>
 	</footer> <!-- footer -->
 
-  	<script src="../js/jquery.slim.min.js"></script>
+  	<!-- <script src="../js/jquery.slim.min.js"></script>
   	<script src="../js/popper.min.js"></script>
-  	<script src="../js/bootstrap.min.js"></script>
+  	<script src="../js/bootstrap.min.js"></script> -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
   	<script src="../js/scrollButton.js"></script>
 </body>
 </html>
