--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- normalize -->
 	<link rel="stylesheet" href="css/normalize.min.css">
 	<!-- Bootstrap -->
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/flexbox.css">
@@ -56,7 +56,7 @@
 		</div><!-- Container -->
 	</nav><!-- Navigation bar -->
 
-	<div class="container">
+	<div class="container portfolio-container">
 		<div class="col-sm-12 col-md-3" id="filter-list">
 			<div class="row">
 				<div id="hideOnSM">
@@ -121,32 +121,12 @@
 			</div>
 		</div>
 
-		<footer class="footer" id="portfolio-footer">
-			<div class="container">
-				<div class="row">
-					<div class="col">
-						<a href="https://github.com/TaylorWilkinson/" target="_blank" id="footer-link">
-							<img class="icon" src="img/github-logo.png" alt="GitHub logo">
-						</a>
-						<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank" id="footer-link">
-							<img class="icon" src="img/linkedin-logo.png" alt="LinkedIn logo">
-						</a>
-						<a href="mailto:tjwilkinsonn@gmail.com" id="footer-link">
-							<img class="icon" src="img/email-logo.png" alt="Email envelope icon">
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="row">
-					<p id="footer-copy">designed & hand coded with love and care</p>
-				</div>
-			</div>
-		</footer> <!-- footer -->
-
-  	<script src="js/jquery.slim.min.js"></script>
-  	<script src="js/popper.min.js"></script>
-  	<script src="js/bootstrap.min.js"></script>
+		<!-- <script src="../js/jquery.slim.min.js"></script>
+  	<script src="../js/popper.min.js"></script>
+  	<script src="../js/bootstrap.min.js"></script> -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <!-- <script src="https:/code.jquery.com/jquery-1.11.1.min.js"></script> -->
