Adding playthrough video for Time's Past, and correct styleguide button on Sprout page

--- a/work/times-past.html
+++ b/work/times-past.html
@@ -143,34 +143,11 @@
         <!-- <button class="cta-button" onclick="location.href='https://taylor410.home.blog/'">INDIVIDUAL DEV BLOG</button> -->
 			</div>
 			<div class="col-lg-6">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="../img/timesPast_lvl1Harriet.png" alt="First slide: Screenshot of the first level from Harriet's perspective" class="img">
-            </div>
-            <div class="carousel-item">
-              <img src="../img/timesPast_lvl1Basil.png" alt="Second slide: Screenshot of the first level from Basil's perspective" class="img">
-            </div>
-            <div class="carousel-item">
-              <img src="../img/timesPast_lvl1Gems.png" alt="Third slide: Screenshot of Harriet collecting gems from an urn" class="img">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
+				<div class="embed-responsive embed-responsive-16by9">
+				  <iframe width="560" height="315" src="https://www.youtube.com/embed/TdmuiewIc3o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
 				<figcaption>
-					Three screenshots of the game's first level, showcasing Harriet and Basil's perspectives, as well as the Gem Collection UI. December 2018.
+					Video showing a full playthrough of Time's Past.
 				</figcaption>
       </div>
 		</div> <!-- end of section :: reflections -->
