Remove 'dev blog' button from Time's Past

--- a/work/times-past.html
+++ b/work/times-past.html
@@ -139,7 +139,7 @@
 				<p>At the end of the course, we had a showcase where our professor brought in five industry professionals to judge our projects and choose the top three games in the class. These included designers and developers from game studios in Vancouver, ranging from medium-sized indie companies to industry giants like EA. Out of ten teams, we were awarded second place. We were also encouraged by the teaching staff and judges that we could release Time's Past as an indie title.</p>
 				<p>Looking back upon my experience creating Time's Past, I'm extremely proud of the end result. Working with Juliana Loughin as my artist and Creative Lead was a joy, and I believe we made a really enjoyable and unique game that fulfilled our goals for the scope of this project.</p>
 				<p>To complete this project and bring it to a level where it could be shared online, there are several changes that we would like to make. Personally, I would make a number of improvements to the game's navigation and UI. We also received feedback on how we could improve certain puzzle design elements to improve the overall experience, such as adding more obvious feedback when completing correct aspects of the puzzle (i.e a visual effect in addition to the audi ofeedback) and some more obvious hints.</p>
-				<button class="cta-button" onclick="location.href='https://ubcdebateclub.home.blog/'">TEAM DEV BLOG</button>
+				<!-- <button class="cta-button" onclick="location.href='https://ubcdebateclub.home.blog/'">TEAM DEV BLOG</button> -->
         <!-- <button class="cta-button" onclick="location.href='https://taylor410.home.blog/'">INDIVIDUAL DEV BLOG</button> -->
 			</div>
 			<div class="col-lg-6">
