Adding missing footer to home + Correcting About page nav

--- a/index.html
+++ b/index.html
@@ -121,9 +121,32 @@
 			</div>
 		</div>
 
-		<!-- <script src="../js/jquery.slim.min.js"></script>
-  	<script src="../js/popper.min.js"></script>
-  	<script src="../js/bootstrap.min.js"></script> -->
+		<footer class="footer" id="portfolio-footer">
+			<div class="container footer-container">
+				<div class="row">
+					<div class="col">
+						<a href="https://github.com/TaylorWilkinson/" target="_blank" id="footer-link">
+							<img class="icon" src="img/github-logo.png" alt="GitHub logo">
+						</a>
+						<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank" id="footer-link">
+							<img class="icon" src="img/linkedin-logo.png" alt="LinkedIn logo">
+						</a>
+						<a href="mailto:tjwilkinsonn@gmail.com" id="footer-link">
+							<img class="icon" src="img/email-logo.png" alt="Email envelope icon">
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="container footer-container">
+				<div class="row">
+					<p id="footer-copy">designed & hand coded with love and care</p>
+				</div>
+			</div>
+		</footer> <!-- footer -->
+
+		<!-- <script src="/js/jquery.slim.min.js"></script>
+  	<script src="/js/popper.min.js"></script>
+  	<script src="/js/bootstrap.min.js"></script> -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
