--- a/about.html
+++ b/about.html
@@ -47,24 +47,15 @@
 
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
-					<a href="index.html" class="nav-item nav-link">PROJECTS</a>
-					<a href="Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">RESUME</a>
-					<a href="about.html" class="nav-item nav-link">ABOUT</a>
+					<a href="index.html" id="navLink" class="nav-link">projects</a>
+					<a href="Resume_TaylorWilkinson.pdf" target="_blank" id="navLink" class="nav-link">resume</a>
+					<a href="about.html" id="navLink" class="nav-link">about</a>
 				</div>
-			</div> <!-- Collapse -->
+			</div><!-- Collapse -->
 		</div>
 	</nav><!-- Navigation bar -->
 
 	<div class="container body-copy">
-		<!--
-		<div class="row full-row">
-			<div class="col offset-lg-1 ">
-				<h1>Greetings, weary traveller.</h1>
-			</div>
-		</div>
-		-->
-		<!-- summary heading -->
-
 		<div class="row" id="full-width-content">
 			<div class="col-lg-3 offset-lg-1 col-md-4 col-sm-12">
 				<img src="img/selfie-circle.png" alt="A photograph of Taylor in a stairwell" id="portrait">
@@ -77,7 +68,30 @@
 			</div>
 		</div> <!-- end the first summary row -->
 
-  </div><!-- landing page content TBD -->
+  </div><!-- body content TBD -->
+
+	<footer class="footer" id="portfolio-footer">
+		<div class="container footer-container">
+			<div class="row">
+				<div class="col">
+					<a href="https://github.com/TaylorWilkinson/" target="_blank" id="footer-link">
+						<img class="icon" src="img/github-logo.png" alt="GitHub logo">
+					</a>
+					<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank" id="footer-link">
+						<img class="icon" src="img/linkedin-logo.png" alt="LinkedIn logo">
+					</a>
+					<a href="mailto:tjwilkinsonn@gmail.com" id="footer-link">
+						<img class="icon" src="img/email-logo.png" alt="Email envelope icon">
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="container footer-container">
+			<div class="row">
+				<p id="footer-copy">designed & hand coded with love and care</p>
+			</div>
+		</div>
+	</footer> <!-- footer -->
 
 	<!-- <script src="../js/jquery.slim.min.js"></script>
 	<script src="../js/popper.min.js"></script>
