Created and added Contact page, edited About page, changed nav bar as necessary

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>Projects - Taylor Wilkinson</title>
+	<title>About Me - Taylor Wilkinson</title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -48,8 +48,9 @@
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
 					<a href="index.html" id="navLink" class="nav-link">projects</a>
-					<a href="Resume_TaylorWilkinson.pdf" target="_blank" id="navLink" class="nav-link">resume</a>
+					<!-- <a href="Resume_TaylorWilkinson.pdf" target="_blank" id="navLink" class="nav-link">resume</a> -->
 					<a href="about.html" id="navLink" class="nav-link">about</a>
+					<a href="contact.html" id="navLink" class="nav-link">contact</a>
 				</div>
 			</div><!-- Collapse -->
 		</div>
@@ -61,10 +62,12 @@
 				<img src="img/selfie-circle.png" alt="A photograph of Taylor in a stairwell" id="portrait">
 			</div>
 			<div class="col-lg-6 col-md-8 col-sm-12">
-				<p>I'm a front-end web developer and designer living in Vancouver, B.C., and finishing her B.Sc. in Interactive Arts and Technology at SFU.</p>
-				<p>My goal is to design applications that reflect my client's identity, and provide a clean and enjoyable experience for the end user.</p>
-				<!-- <p>As an articulate communicator, I'm able to engage with co-workers and customers alike to achieve the most desired result. I'm your friendly, neighbourhood Myers-Briggs INFP.</p> -->
-				<p>Interested in hearing about my work? Want to tell me about your D&D character, your dog, or who you're rooting for on Rupaul's Drag Race? Feel free to <a href="mailto:tjwilkinsonn@gmail.com">shoot me an e-mail</a>!</p>
+				<h1>Hello weary traveller,</h1>
+				<p>I'm <strong>Taylor</strong>, a front-end web developer and designer living in Vancouver, B.C., and finishing her B.Sc. in Interactive Arts and Technology at SFU.</p>
+				<p>My goal is to design applications that reflect my client's identity, and provide a clean and enjoyable experience for the end user. You can check out <a href="Resume_TaylorWilkinson.pdf" target="_blank">my resume</a> for more about my work experience.</p>
+				<p>As an articulate communicator, I'm able to engage with co-workers and customers alike to achieve the most desired result. I'm your friendly, neighbourhood Myers-Briggs INFP.</p>
+				<h2>Have a job you think I'll be a great fit for?</h2>
+				<p>Check out my <a href="contact.html">contact</a> page or <a href="mailto:tjwilkinsonn@gmail.com">send me an e-mail</a>.</p>
 			</div>
 		</div> <!-- end the first summary row -->
 
