--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
 					<a href="index.html" id="navLink" class="nav-link">projects</a>
-					<a href="Resume_TaylorWilkinson.pdf" target="_blank" id="navLink" class="nav-link">resume</a>
+					<!-- <a href="Resume_TaylorWilkinson.pdf" target="_blank" id="navLink" class="nav-link">resume</a> -->
 					<a href="about.html" id="navLink" class="nav-link">about</a>
+					<a href="contact.html" id="navLink" class="nav-link">contact</a>
 				</div>
 			</div><!-- Collapse -->
 		</div><!-- Container -->
