--- a/work/sunday-morning.html
+++ b/work/sunday-morning.html
@@ -47,9 +47,10 @@
 
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
-					<a href="../index.html" class="nav-item nav-link">projects</a>
-					<a href="../Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">resume</a>
+          <a href="../index.html" class="nav-item nav-link">projects</a>
+					<!-- <a href="../Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">resume</a> -->
 					<a href="../about.html" class="nav-item nav-link">about</a>
+					<a href="../contact.html" class="nav-item nav-link">contact</a>
 				</div>
 			</div> <!-- Collapse -->
 		</div>
