--- a/work/helping-hand.html
+++ b/work/helping-hand.html
@@ -48,8 +48,9 @@
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
 					<a href="../index.html" class="nav-item nav-link">projects</a>
-					<a href="../Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">resume</a>
+					<!-- <a href="../Resume_TaylorWilkinson.pdf" target="_blank" class="nav-item nav-link">resume</a> -->
 					<a href="../about.html" class="nav-item nav-link">about</a>
+					<a href="../contact.html" class="nav-item nav-link">contact</a>
 				</div>
 			</div> <!-- Collapse -->
 		</div>
