Updates to CSS color variables, and updated grid on Contact page.

--- a/contact.html
+++ b/contact.html
@@ -58,15 +58,15 @@
 
 	<div class="container body-copy">
 		<div class="row" id="full-width-content">
-			<div class="col-sm-12">
+			<div class="col-sm-12 offset-lg-2 col-lg-8">
 				<h1 class="about-text">Get In Touch!</h1>
 				<p class="about-text">Have a job you think I'm suited for? Want to hear more about my work? Feel like telling me about your D&D character or your dog?</p>
 				<p class="about-text">
 					<a class="about-button" href="mailto:tjwilkinsonn@gmail.com" role="button">Send Me An E-mail</a>
 				</p>
 			</div>
-			<div class="col-sm-12">
-				<h2 class="about-text">You can also</h2>
+			<div class="col-sm-12 offset-lg-2 col-lg-8">
+				<h2 class="about-text" id="about-header2">You can also</h2>
 				<p class="about-text">Follow me on <a href="https://twitter.com/taylorwilks">Twitter</a>, send me a <a href="https://twitter.com/messages/compose?recipient_id=94417917">Twitter DM</a>, or visit my <a href="https://www.linkedin.com/in/taylorjwilkinson/">LinkedIn</a>!</p>
 			</div>
 		</div> <!-- end the first summary row -->
