--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 			<div class="col-lg-6 col-md-8 col-sm-12">
 				<h1>Hello weary traveller,</h1>
 				<p>I'm <strong>Taylor</strong>, a front-end web developer and designer living in Vancouver, B.C., and finishing her B.Sc. in Interactive Arts and Technology at SFU.</p>
-				<p>My goal is to design applications that reflect my client's identity, and provide a clean and enjoyable experience for the end user. You can check out <a href="Resume_TaylorWilkinson.pdf" target="_blank">my resume</a> for more about my work experience.</p>
+				<p>I love to build apps and solve problems. My goal is to develop sites that are beautifully designed and that reflect my client's identity while providing a clean and enjoyable experience for the end user. You can check out <a href="Resume_TaylorWilkinson.pdf" target="_blank">my resume</a> for more about my work experience.</p>
 				<p>As an articulate communicator, I'm able to engage with co-workers and customers alike to achieve the most desired result. I'm your friendly, neighbourhood Myers-Briggs INFP.</p>
 				<h2>Have a job you think I'll be a great fit for?</h2>
 				<p>Check out my <a href="contact.html">contact</a> page or <a href="mailto:tjwilkinsonn@gmail.com">send me an e-mail</a>.</p>
