Removing Twitter link from my portfolio so that fewer professionals can judge my bad memes and D&D obsession

--- a/contact.html
+++ b/contact.html
@@ -66,8 +66,7 @@
 				</p>
 			</div>
 			<div class="col-sm-12 offset-lg-2 col-lg-8">
-				<h2 class="about-text" id="about-header2">You can also</h2>
-				<p class="about-text">Follow me on <a href="https://twitter.com/taylorwilks">Twitter</a>, send me a <a href="https://twitter.com/messages/compose?recipient_id=94417917">Twitter DM</a>, or visit my <a href="https://www.linkedin.com/in/taylorjwilkinson/">LinkedIn</a>!</p>
+				<p class="about-text">You can also visit my <a href="https://www.linkedin.com/in/taylorjwilkinson/">LinkedIn</a>!</p>
 			</div>
 		</div> <!-- end the first summary row -->
 
