Added employment info to About page.

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 			</div>
 			<div class="col-lg-6 col-md-8 col-sm-12">
 				<h1>Hello weary traveller,</h1>
-				<p>I'm <strong>Taylor</strong>, a front-end web developer and designer living in Vancouver, B.C. I graduated from Simon Fraser University in 2019 with a B.Sc. in Interactive Arts and Technology with a concentration in Interactive Systems.</p>
+				<p>I'm <strong>Taylor</strong>, a front-end web developer and designer living in Vancouver, B.C. I'm currently working for Corvum as a Web Developer and UI Designer. I graduated from Simon Fraser University in 2019 with a B.Sc. in Interactive Arts and Technology with a concentration in Interactive Systems.</p>
 				<p>I love to build apps and solve problems. My goal is to develop sites that are beautifully designed and that reflect my client's identity while providing a clean and enjoyable experience for the end user. You can check out <a href="Resume_TaylorWilkinson.pdf" target="_blank">my resume</a> for more about my work experience.</p>
 				<p>As an articulate communicator, I'm able to engage with co-workers and customers alike to achieve the most desired result. I'm your friendly, neighbourhood Myers-Briggs INFP.</p>
 				<h2>Have a job you think I'll be a great fit for?</h2>
